--- a/app/views/sign_up/show.haml
+++ b/app/views/sign_up/show.haml
@@ -1,6 +1,9 @@
-#heading
-  Thanks for submitting your information. We will contact you shortly.
-  %br
-  For additional information or questions, call 1-866-3165-7124.
-  %br
+#thank_you
+  .thanks
+    Thanks for submitting your information!
+  .note
+    We will contact you shortly.
+    %br
+    For additional information or questions, call 1-866-3165-7124.
+    %br
 
