--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -7,25 +7,11 @@
 // Import all the default blueprint modules so that we can access their mixins.
 @import "blueprint";
 
-// Import the non-default scaffolding module.
-//@import "blueprint/scaffolding";
 
-// To generate css equivalent to the blueprint css but with your
-// configuration applied, uncomment:
-// @include blueprint
-
-// But Compass recommends that you scope your blueprint styles
-// So that you can better control what pages use blueprint
-// when stylesheets are concatenated together.
-//@include blueprint-scaffolding("body.bp");
 
 body.bp {
   @include blueprint-typography(true);
-  //@include blueprint-utilities;
-  //@include blueprint-debug;
-  //@include blueprint-interaction;
-  // Remove the scaffolding when you're ready to start doing visual design.
-  // Or leave it in if you're happy with how blueprint looks out-of-the-box
+
 }
 
 // Some of our color settings
@@ -38,24 +24,17 @@ $lgt_link: #BDCDEC;
 $visited_lgt_link: #BDCDEC;
 $hover_lgt_link: #96B0E0;
 
+$flashmsg_bg: #E0F100;
+$flashmsg_txt: #333;
+$flashmsg_bg_label: #ECF1A7;
+
 $page_height: 830px;
 
 
 // Page layout can be done using mixins applied to your semantic classes and IDs:
 body {
   background-color: $bg_color; //#304f80;
-//  background-image: -webkit-gradient(
-//    linear,
-//    left bottom,
-//    left top,
-//    color-stop(0.15, #70A1C9),
-//    color-stop(0.58, #3A5FA6)
-//  );
-//  background-image: -moz-linear-gradient(
-//    center bottom,
-//    #70A1C9 15%,
-//    #3A5FA6 58%
-//  );
+
 }
 
 //holds the layers just to set the page size
@@ -108,7 +87,7 @@ body {
   z-index: 4;
 }
 
-
+// The blueprint container for our content
 #container {
   position: absolute;
   left: 15%;
@@ -118,11 +97,35 @@ body {
   z-index: 10;
 }
 
+// The blueprint positionable content area
 #content {
   @include column($blueprint-grid-columns, true);
   z-index: 100; 
 } 
 
+#flashmsg{
+  @include column($blueprint-grid-columns,true);
+  background-color: $flashmsg_bg;
+  color: $flashmsg_txt;
+  padding: 0.4em;
+  font-size: 1.4em;
+  font-weight: bold;
+  .msg{
+    @include column(10);
+    text-align: right;
+  }
+  
+  .ers{
+    @include column(10,true);
+    @include prepend(1);
+    text-align: left;
+    font-size: 0.8em; 
+    ul{
+      padding: 0.3em 0;
+      margin: 0;
+    }
+  }
+}
 #heading {
   @include prepend-top(1em);
   font-size: 2em;
@@ -204,6 +207,9 @@ body {
 
 }
 
+.field_with_errors{
+  background-color: $flashmsg_bg_label;
+}
 
 .submit_area{
   text-align: right;
@@ -271,5 +277,16 @@ body {
   display: none;
 }
 
+#thank_you{
+   @include prepend-top(4em);
+  font-size: 2em;
+  font-weight: bold;
+
+  .note {
+    font-size: 0.8em;
+    font-weight: normal;
+  }
+
+}
 
 
