--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -81,7 +81,7 @@ a img {
   border: none;
 }
 
-/* line 22, ../../../app/stylesheets/screen.scss */
+/* line 12, ../../../app/stylesheets/screen.scss */
 body.bp {
   line-height: 1.5;
   font-family: "Helvetica Neue", Arial, Helvetica, sans-serif;
@@ -283,18 +283,18 @@ body.bp .loud {
   color: #111111;
 }
 
-/* line 45, ../../../app/stylesheets/screen.scss */
+/* line 35, ../../../app/stylesheets/screen.scss */
 body {
   background-color: #3a5fa6;
 }
 
-/* line 62, ../../../app/stylesheets/screen.scss */
+/* line 41, ../../../app/stylesheets/screen.scss */
 #layer_frame {
   position: relative;
   height: 830px;
 }
 
-/* line 77, ../../../app/stylesheets/screen.scss */
+/* line 56, ../../../app/stylesheets/screen.scss */
 #hancock_layer {
   background: transparent;
   position: absolute;
@@ -309,7 +309,7 @@ body {
   z-index: 1;
 }
 
-/* line 86, ../../../app/stylesheets/screen.scss */
+/* line 65, ../../../app/stylesheets/screen.scss */
 #metra_layer {
   background: transparent;
   position: absolute;
@@ -324,7 +324,7 @@ body {
   z-index: 2;
 }
 
-/* line 95, ../../../app/stylesheets/screen.scss */
+/* line 74, ../../../app/stylesheets/screen.scss */
 #ferris_layer {
   background: transparent;
   position: absolute;
@@ -338,7 +338,7 @@ body {
   z-index: 3;
 }
 
-/* line 103, ../../../app/stylesheets/screen.scss */
+/* line 82, ../../../app/stylesheets/screen.scss */
 #cornfield_layer {
   background: transparent;
   position: absolute;
@@ -352,7 +352,7 @@ body {
   z-index: 4;
 }
 
-/* line 112, ../../../app/stylesheets/screen.scss */
+/* line 91, ../../../app/stylesheets/screen.scss */
 #container {
   position: absolute;
   left: 15%;
@@ -364,7 +364,7 @@ body {
   z-index: 10;
 }
 
-/* line 121, ../../../app/stylesheets/screen.scss */
+/* line 101, ../../../app/stylesheets/screen.scss */
 #content {
   display: inline;
   float: left;
@@ -377,19 +377,67 @@ body {
   overflow-x: hidden;
 }
 
-/* line 126, ../../../app/stylesheets/screen.scss */
+/* line 106, ../../../app/stylesheets/screen.scss */
+#flashmsg {
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 950px;
+  background-color: #e0f100;
+  color: #333333;
+  padding: 0.4em;
+  font-size: 1.4em;
+  font-weight: bold;
+}
+/* line 138, ../../../../../.rvm/gems/ree-1.8.7-2011.03@ncs_signup/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #flashmsg {
+  overflow-x: hidden;
+}
+/* line 113, ../../../app/stylesheets/screen.scss */
+#flashmsg .msg {
+  display: inline;
+  float: left;
+  margin-right: 10px;
+  width: 390px;
+  text-align: right;
+}
+/* line 138, ../../../../../.rvm/gems/ree-1.8.7-2011.03@ncs_signup/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #flashmsg .msg {
+  overflow-x: hidden;
+}
+/* line 118, ../../../app/stylesheets/screen.scss */
+#flashmsg .ers {
+  display: inline;
+  float: left;
+  margin-right: 0;
+  width: 390px;
+  padding-left: 40px;
+  text-align: left;
+  font-size: 0.8em;
+}
+/* line 138, ../../../../../.rvm/gems/ree-1.8.7-2011.03@ncs_signup/gems/compass-0.10.6/frameworks/blueprint/stylesheets/blueprint/_grid.scss */
+* html #flashmsg .ers {
+  overflow-x: hidden;
+}
+/* line 123, ../../../app/stylesheets/screen.scss */
+#flashmsg .ers ul {
+  padding: 0.3em 0;
+  margin: 0;
+}
+
+/* line 129, ../../../app/stylesheets/screen.scss */
 #heading {
   margin-top: 1em;
   font-size: 2em;
 }
-/* line 130, ../../../app/stylesheets/screen.scss */
+/* line 133, ../../../app/stylesheets/screen.scss */
 #heading em {
   font-style: normal;
   font-size: 1.2em;
   font-weight: bold;
 }
 
-/* line 138, ../../../app/stylesheets/screen.scss */
+/* line 141, ../../../app/stylesheets/screen.scss */
 #sign_up {
   margin-top: 2em;
   padding-left: 80px;
@@ -403,7 +451,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 144, ../../../app/stylesheets/screen.scss */
+/* line 147, ../../../app/stylesheets/screen.scss */
 .group {
   display: inline;
   float: left;
@@ -416,7 +464,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 149, ../../../app/stylesheets/screen.scss */
+/* line 152, ../../../app/stylesheets/screen.scss */
 .name {
   display: inline;
   float: left;
@@ -432,7 +480,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 157, ../../../app/stylesheets/screen.scss */
+/* line 160, ../../../app/stylesheets/screen.scss */
 .fields {
   display: inline;
   float: left;
@@ -443,20 +491,20 @@ body {
 * html .fields {
   overflow-x: hidden;
 }
-/* line 160, ../../../app/stylesheets/screen.scss */
+/* line 163, ../../../app/stylesheets/screen.scss */
 .fields .field {
   margin: 5px;
   background: #fff;
   border: 1px inset #999;
 }
-/* line 165, ../../../app/stylesheets/screen.scss */
+/* line 168, ../../../app/stylesheets/screen.scss */
 .fields .field label {
   position: absolute;
   padding: 2px 3px 3px 3px;
   margin-left: 3px;
   color: #999999;
 }
-/* line 172, ../../../app/stylesheets/screen.scss */
+/* line 175, ../../../app/stylesheets/screen.scss */
 .fields .field input, .fields .field textarea, .fields .field select {
   position: relative;
   margin: 0;
@@ -465,7 +513,7 @@ body {
   background: transparent;
   font: inherit;
 }
-/* line 181, ../../../app/stylesheets/screen.scss */
+/* line 184, ../../../app/stylesheets/screen.scss */
 .fields .reg {
   display: inline;
   float: left;
@@ -476,7 +524,7 @@ body {
 * html .fields .reg {
   overflow-x: hidden;
 }
-/* line 184, ../../../app/stylesheets/screen.scss */
+/* line 187, ../../../app/stylesheets/screen.scss */
 .fields .sub_group {
   display: inline;
   float: left;
@@ -487,7 +535,7 @@ body {
 * html .fields .sub_group {
   overflow-x: hidden;
 }
-/* line 187, ../../../app/stylesheets/screen.scss */
+/* line 190, ../../../app/stylesheets/screen.scss */
 .fields .city {
   display: inline;
   float: left;
@@ -498,7 +546,7 @@ body {
 * html .fields .city {
   overflow-x: hidden;
 }
-/* line 190, ../../../app/stylesheets/screen.scss */
+/* line 193, ../../../app/stylesheets/screen.scss */
 .fields .state {
   display: inline;
   float: left;
@@ -509,7 +557,7 @@ body {
 * html .fields .state {
   overflow-x: hidden;
 }
-/* line 193, ../../../app/stylesheets/screen.scss */
+/* line 196, ../../../app/stylesheets/screen.scss */
 .fields .zip {
   display: inline;
   float: left;
@@ -520,44 +568,49 @@ body {
 * html .fields .zip {
   overflow-x: hidden;
 }
-/* line 197, ../../../app/stylesheets/screen.scss */
+/* line 200, ../../../app/stylesheets/screen.scss */
 .fields .alt_field {
   color: #f0f0f0;
   font-weight: bold;
 }
-/* line 200, ../../../app/stylesheets/screen.scss */
+/* line 203, ../../../app/stylesheets/screen.scss */
 .fields .alt_field label {
   font-size: 1.2em;
 }
 
-/* line 208, ../../../app/stylesheets/screen.scss */
+/* line 210, ../../../app/stylesheets/screen.scss */
+.field_with_errors {
+  background-color: #ecf1a7;
+}
+
+/* line 214, ../../../app/stylesheets/screen.scss */
 .submit_area {
   text-align: right;
   clear: both;
   padding-right: 2em;
   padding-top: 2em;
 }
-/* line 214, ../../../app/stylesheets/screen.scss */
+/* line 220, ../../../app/stylesheets/screen.scss */
 .submit_area a {
   color: #bdcdec !important;
   font-weight: bold;
 }
-/* line 218, ../../../app/stylesheets/screen.scss */
+/* line 224, ../../../app/stylesheets/screen.scss */
 .submit_area a:visited {
   color: #bdcdec !important;
 }
-/* line 222, ../../../app/stylesheets/screen.scss */
+/* line 228, ../../../app/stylesheets/screen.scss */
 .submit_area a:hover {
   color: #96b0e0 !important;
 }
 
-/* line 228, ../../../app/stylesheets/screen.scss */
+/* line 234, ../../../app/stylesheets/screen.scss */
 #signup_submit {
   font-size: 1.5em;
   padding: 5px;
 }
 
-/* line 233, ../../../app/stylesheets/screen.scss */
+/* line 239, ../../../app/stylesheets/screen.scss */
 #footer {
   position: absolute;
   bottom: 0px;
@@ -568,25 +621,25 @@ body {
   font-size: 1.1em;
   z-index: 5;
 }
-/* line 243, ../../../app/stylesheets/screen.scss */
+/* line 249, ../../../app/stylesheets/screen.scss */
 #footer .ncs_logo {
   float: left;
   padding-top: 0.2em;
   padding-left: 0.4em;
 }
-/* line 249, ../../../app/stylesheets/screen.scss */
+/* line 255, ../../../app/stylesheets/screen.scss */
 #footer .contact_info {
   padding-top: 1em;
   text-align: center;
 }
-/* line 254, ../../../app/stylesheets/screen.scss */
+/* line 260, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text {
   float: right;
   width: 200px;
   padding-top: 0.5em;
   padding-right: 0.5em;
 }
-/* line 260, ../../../app/stylesheets/screen.scss */
+/* line 266, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text img {
   padding: 1em;
   display: block;
@@ -594,7 +647,19 @@ body {
   margin-right: auto;
 }
 
-/* line 270, ../../../app/stylesheets/screen.scss */
+/* line 276, ../../../app/stylesheets/screen.scss */
 #confd_msg {
   display: none;
+}
+
+/* line 280, ../../../app/stylesheets/screen.scss */
+#thank_you {
+  margin-top: 4em;
+  font-size: 2em;
+  font-weight: bold;
+}
+/* line 285, ../../../app/stylesheets/screen.scss */
+#thank_you .note {
+  font-size: 0.8em;
+  font-weight: normal;
 }
