--- a/app/views/sign_up/new.haml
+++ b/app/views/sign_up/new.haml
@@ -21,44 +21,44 @@
       .fields
         .field.reg
           = f.label :name, {:class => 'overlabel'}
-          = f.text_field :name, {:size => 33, :maxlength => 150}
+          = f.text_field :name, {:size => 34, :maxlength => 150}
     .group
       .name Your Address
       .fields
         .field.reg
           = f.label :address, {:class => 'overlabel'}
-          = f.text_field :address, {:size => 33, :maxlength => 150}
+          = f.text_field :address, {:size => 34, :maxlength => 150}
         .field.reg
           = f.label :apt_or_unit, "Apt or Unit #", {:class => 'overlabel'}
-          = f.text_field :apt_or_unit, {:size => 33, :maxlength => 150}
+          = f.text_field :apt_or_unit, {:size => 34, :maxlength => 150}
         .field.city
           = f.label :city, {:class => 'overlabel'}
-          = f.text_field :city, {:size => 33, :maxlength => 150}
+          = f.text_field :city, {:size => 34, :maxlength => 150}
         .sub_group
           .field.state
             = f.label :state, {:class => 'overlabel'}
-            = f.text_field :state, {:size => 10, :maxlength =>50, :value => "Illinois"}
+            = f.text_field :state, {:size => 11, :maxlength =>50, :value => "Illinois"}
           .field.zip
             = f.label :zip, {:class => 'overlabel'}
-            = f.text_field :zip, {:size => 5, :maxlength => 5} 
+            = f.text_field :zip, {:size => 11, :maxlength => 5} 
     .group
       .name Your phone numbers
       .fields
         .field.reg
           = f.label :home_phone, {:class => 'overlabel'}
-          = f.text_field :home_phone
+          = f.text_field :home_phone, {:size => 34, :maxlength => 150}
         .field.reg
           = f.label :mobile_phone, {:class => 'overlabel'}
-          = f.text_field :mobile_phone
+          = f.text_field :mobile_phone, {:size => 34, :maxlength => 150}
         .field.reg
           = f.label :work_phone, {:class => 'overlabel'}
-          = f.text_field :work_phone
+          = f.text_field :work_phone, {:size => 34, :maxlength => 150}
     .group
       .name Your email
       .fields
         .field.reg
           = f.label :email, {:class => 'overlabel'}
-          = f.text_field :email
+          = f.text_field :email, {:size => 34, :maxlength => 150}
     .group  
       .name &nbsp;
       .fields
