some ui tweak and fix for IE around the overlabel hiding and showing

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -170,6 +170,7 @@ body {
       padding: 2px 3px 3px 3px;
       margin-left: 3px;
       color: $label_text;
+      background: transparent;
      }
 
     input, textarea, select {
