--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -1,7 +1,7 @@
 %html
   %head
     %title NCS Registration Page
-    
+    %link{ :rel=>"icon", :type=>"image/gif", :href=>"/images/favicon.gif"}
     = stylesheet_link_tag 'compiled/screen.css', :media => 'screen, projection'
     = stylesheet_link_tag 'flick/jquery-ui-1.8.12.custom.css', :media => 'screen' 
     //= stylesheet_link_tag 'compiled/print.css', :media => 'print'
