--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -34,6 +34,18 @@
           420 East Superior, 10th Floor
           %br
           Chicago, IL 60611
+    -if Rails.env.production?
+      :javascript
+        
+         var _gaq = _gaq || [];
+         _gaq.push(['_setAccount', 'UA-23579637-1']);
+         _gaq.push(['_trackPageview']);
+        
+         (function() {
+           var ga = document.createElement('script'); ga.type = 'text/javascript'; ga.async = true;
+           ga.src = ('https:' == document.location.protocol ? 'https://ssl' : 'http://www') + '.google-analytics.com/ga.js';
+           var s = document.getElementsByTagName('script')[0]; s.parentNode.insertBefore(ga, s);
+         })();
 
 
 
