--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -332,13 +332,14 @@ body {
   bottom: 120px;
   left: 0;
   right: 0;
+  bottom: 160px;
   background-image: url("/images/ferris_layer.png");
   background-repeat: no-repeat;
   background-position: right bottom;
   z-index: 3;
 }
 
-/* line 82, ../../../app/stylesheets/screen.scss */
+/* line 83, ../../../app/stylesheets/screen.scss */
 #cornfield_layer {
   background: transparent;
   position: absolute;
@@ -352,7 +353,7 @@ body {
   z-index: 4;
 }
 
-/* line 91, ../../../app/stylesheets/screen.scss */
+/* line 92, ../../../app/stylesheets/screen.scss */
 #container {
   position: absolute;
   left: 15%;
@@ -364,7 +365,7 @@ body {
   z-index: 10;
 }
 
-/* line 101, ../../../app/stylesheets/screen.scss */
+/* line 102, ../../../app/stylesheets/screen.scss */
 #content {
   display: inline;
   float: left;
@@ -377,7 +378,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 106, ../../../app/stylesheets/screen.scss */
+/* line 107, ../../../app/stylesheets/screen.scss */
 #flashmsg {
   display: inline;
   float: left;
@@ -393,7 +394,7 @@ body {
 * html #flashmsg {
   overflow-x: hidden;
 }
-/* line 113, ../../../app/stylesheets/screen.scss */
+/* line 114, ../../../app/stylesheets/screen.scss */
 #flashmsg .msg {
   display: inline;
   float: left;
@@ -405,7 +406,7 @@ body {
 * html #flashmsg .msg {
   overflow-x: hidden;
 }
-/* line 118, ../../../app/stylesheets/screen.scss */
+/* line 119, ../../../app/stylesheets/screen.scss */
 #flashmsg .ers {
   display: inline;
   float: left;
@@ -419,25 +420,25 @@ body {
 * html #flashmsg .ers {
   overflow-x: hidden;
 }
-/* line 123, ../../../app/stylesheets/screen.scss */
+/* line 124, ../../../app/stylesheets/screen.scss */
 #flashmsg .ers ul {
   padding: 0.3em 0;
   margin: 0;
 }
 
-/* line 129, ../../../app/stylesheets/screen.scss */
+/* line 130, ../../../app/stylesheets/screen.scss */
 #heading {
   margin-top: 1em;
   font-size: 2em;
 }
-/* line 133, ../../../app/stylesheets/screen.scss */
+/* line 134, ../../../app/stylesheets/screen.scss */
 #heading em {
   font-style: normal;
   font-size: 1.2em;
   font-weight: bold;
 }
 
-/* line 141, ../../../app/stylesheets/screen.scss */
+/* line 142, ../../../app/stylesheets/screen.scss */
 #sign_up {
   margin-top: 2em;
   padding-left: 80px;
@@ -451,7 +452,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 147, ../../../app/stylesheets/screen.scss */
+/* line 148, ../../../app/stylesheets/screen.scss */
 .group {
   display: inline;
   float: left;
@@ -464,7 +465,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 152, ../../../app/stylesheets/screen.scss */
+/* line 153, ../../../app/stylesheets/screen.scss */
 .name {
   display: inline;
   float: left;
@@ -480,7 +481,7 @@ body {
   overflow-x: hidden;
 }
 
-/* line 160, ../../../app/stylesheets/screen.scss */
+/* line 161, ../../../app/stylesheets/screen.scss */
 .fields {
   display: inline;
   float: left;
@@ -491,13 +492,13 @@ body {
 * html .fields {
   overflow-x: hidden;
 }
-/* line 163, ../../../app/stylesheets/screen.scss */
+/* line 164, ../../../app/stylesheets/screen.scss */
 .fields .field {
   margin: 5px;
   background: #fff;
   border: 1px inset #999;
 }
-/* line 168, ../../../app/stylesheets/screen.scss */
+/* line 169, ../../../app/stylesheets/screen.scss */
 .fields .field label {
   position: absolute;
   padding: 2px 3px 3px 3px;
@@ -505,7 +506,7 @@ body {
   color: #999999;
   background: transparent;
 }
-/* line 176, ../../../app/stylesheets/screen.scss */
+/* line 177, ../../../app/stylesheets/screen.scss */
 .fields .field input, .fields .field textarea, .fields .field select {
   position: relative;
   margin: 0;
@@ -514,7 +515,7 @@ body {
   background: transparent;
   font: inherit;
 }
-/* line 185, ../../../app/stylesheets/screen.scss */
+/* line 186, ../../../app/stylesheets/screen.scss */
 .fields .reg {
   display: inline;
   float: left;
@@ -525,7 +526,7 @@ body {
 * html .fields .reg {
   overflow-x: hidden;
 }
-/* line 188, ../../../app/stylesheets/screen.scss */
+/* line 189, ../../../app/stylesheets/screen.scss */
 .fields .sub_group {
   display: inline;
   float: left;
@@ -536,7 +537,7 @@ body {
 * html .fields .sub_group {
   overflow-x: hidden;
 }
-/* line 191, ../../../app/stylesheets/screen.scss */
+/* line 192, ../../../app/stylesheets/screen.scss */
 .fields .city {
   display: inline;
   float: left;
@@ -547,7 +548,7 @@ body {
 * html .fields .city {
   overflow-x: hidden;
 }
-/* line 194, ../../../app/stylesheets/screen.scss */
+/* line 195, ../../../app/stylesheets/screen.scss */
 .fields .state {
   display: inline;
   float: left;
@@ -558,7 +559,7 @@ body {
 * html .fields .state {
   overflow-x: hidden;
 }
-/* line 197, ../../../app/stylesheets/screen.scss */
+/* line 198, ../../../app/stylesheets/screen.scss */
 .fields .zip {
   display: inline;
   float: left;
@@ -569,49 +570,49 @@ body {
 * html .fields .zip {
   overflow-x: hidden;
 }
-/* line 201, ../../../app/stylesheets/screen.scss */
+/* line 202, ../../../app/stylesheets/screen.scss */
 .fields .alt_field {
   color: #f0f0f0;
   font-weight: bold;
 }
-/* line 204, ../../../app/stylesheets/screen.scss */
+/* line 205, ../../../app/stylesheets/screen.scss */
 .fields .alt_field label {
   font-size: 1.2em;
 }
 
-/* line 211, ../../../app/stylesheets/screen.scss */
+/* line 212, ../../../app/stylesheets/screen.scss */
 .field_with_errors {
   background-color: #ecf1a7;
 }
 
-/* line 216, ../../../app/stylesheets/screen.scss */
+/* line 217, ../../../app/stylesheets/screen.scss */
 .submit_area {
   text-align: right;
   clear: both;
   padding-right: 2em;
   padding-top: 2em;
 }
-/* line 222, ../../../app/stylesheets/screen.scss */
+/* line 223, ../../../app/stylesheets/screen.scss */
 .submit_area a {
   color: #bdcdec !important;
   font-weight: bold;
 }
-/* line 226, ../../../app/stylesheets/screen.scss */
+/* line 227, ../../../app/stylesheets/screen.scss */
 .submit_area a:visited {
   color: #bdcdec !important;
 }
-/* line 230, ../../../app/stylesheets/screen.scss */
+/* line 231, ../../../app/stylesheets/screen.scss */
 .submit_area a:hover {
   color: #96b0e0 !important;
 }
 
-/* line 236, ../../../app/stylesheets/screen.scss */
+/* line 237, ../../../app/stylesheets/screen.scss */
 #signup_submit {
   font-size: 1.5em;
   padding: 5px;
 }
 
-/* line 241, ../../../app/stylesheets/screen.scss */
+/* line 242, ../../../app/stylesheets/screen.scss */
 #footer {
   position: absolute;
   bottom: 0px;
@@ -622,25 +623,25 @@ body {
   font-size: 1.1em;
   z-index: 5;
 }
-/* line 251, ../../../app/stylesheets/screen.scss */
+/* line 252, ../../../app/stylesheets/screen.scss */
 #footer .ncs_logo {
   float: left;
   padding-top: 0.2em;
   padding-left: 0.4em;
 }
-/* line 257, ../../../app/stylesheets/screen.scss */
+/* line 258, ../../../app/stylesheets/screen.scss */
 #footer .contact_info {
   padding-top: 1em;
   text-align: center;
 }
-/* line 262, ../../../app/stylesheets/screen.scss */
+/* line 263, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text {
   float: right;
   width: 200px;
   padding-top: 0.5em;
   padding-right: 0.5em;
 }
-/* line 268, ../../../app/stylesheets/screen.scss */
+/* line 269, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text img {
   padding: 1em;
   display: block;
@@ -648,18 +649,19 @@ body {
   margin-right: auto;
 }
 
-/* line 278, ../../../app/stylesheets/screen.scss */
+/* line 279, ../../../app/stylesheets/screen.scss */
 #confd_msg {
   display: none;
 }
 
-/* line 282, ../../../app/stylesheets/screen.scss */
+/* line 283, ../../../app/stylesheets/screen.scss */
 #thank_you {
   margin-top: 4em;
+  padding-left: 40px;
   font-size: 2em;
   font-weight: bold;
 }
-/* line 287, ../../../app/stylesheets/screen.scss */
+/* line 289, ../../../app/stylesheets/screen.scss */
 #thank_you .note {
   font-size: 0.8em;
   font-weight: normal;
