update to phone number on thanks page

--- a/app/views/sign_up/show.haml
+++ b/app/views/sign_up/show.haml
@@ -4,6 +4,6 @@
   .note
     We will contact you shortly.
     %br
-    For additional information or questions, call 1-866-3165-7124.
+    For additional information or questions please call 1-866-315-7124 
     %br
 
