Changes to footer images and text as per 508 review

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -21,13 +21,13 @@
           = yield
       #footer
         .ncs_logo
-          = image_tag("ncs_gcsc_logo_sm.png")
+          = image_tag("ncs_gcsc_logo_sm.png", :alt => "National Children's Study logo for Greater Chicago Study Center" )
         .ncs_text
-          = image_tag("ncs_gcsc_redwords_sm.png")  
+          = image_tag("ncs_gcsc_redwords_sm.png", :alt => "Greater Chicago Study Center")  
         .contact_info
-          National Children’s Study-Greater Chicago Study Center
+          National Children&#39;s Study &ndash; Greater Chicago Study Center
           %br
-          Institute for Healthcare Studies,Feinberg School of Medicine
+          Institute for Healthcare Studies, Feinberg School of Medicine
           %br
           Northwestern University
           %br
