--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -23,7 +23,7 @@
         .ncs_logo
           = image_tag("ncs_gcsc_logo_sm.png", :alt => "National Children's Study logo for Greater Chicago Study Center" )
         .ncs_text
-          = image_tag("ncs_gcsc_redwords_sm.png", :alt => "Greater Chicago Study Center")  
+          = image_tag("ncs_gcsc_words_sm.png", :alt => "Greater Chicago Study Center")  
         .contact_info
           National Children&#39;s Study &ndash; Greater Chicago Study Center
           %br
