--- a/public/stylesheets/compiled/screen.css
+++ b/public/stylesheets/compiled/screen.css
@@ -285,13 +285,14 @@ body.bp .loud {
 
 /* line 35, ../../../app/stylesheets/screen.scss */
 body {
-  background-color: #3a5fa6;
+  background-color: white;
 }
 
-/* line 41, ../../../app/stylesheets/screen.scss */
+/* line 40, ../../../app/stylesheets/screen.scss */
 #layer_frame {
   position: relative;
   height: 830px;
+  background-color: #3a5fa6;
 }
 
 /* line 55, ../../../app/stylesheets/screen.scss */
@@ -500,7 +501,7 @@ body {
   position: absolute;
   padding: 2px 3px 3px 3px;
   margin-left: 3px;
-  color: #999999;
+  color: #777777;
   background: transparent;
 }
 /* line 177, ../../../app/stylesheets/screen.scss */
@@ -588,57 +589,58 @@ body {
   clear: both;
   padding-right: 2em;
   padding-top: 2em;
+  font-size: 1.1em;
 }
-/* line 223, ../../../app/stylesheets/screen.scss */
+/* line 224, ../../../app/stylesheets/screen.scss */
 .submit_area a {
-  color: #bdcdec !important;
+  color: #f0f0f0 !important;
   font-weight: bold;
 }
-/* line 227, ../../../app/stylesheets/screen.scss */
+/* line 228, ../../../app/stylesheets/screen.scss */
 .submit_area a:visited {
-  color: #bdcdec !important;
+  color: #f0f0f0 !important;
 }
-/* line 231, ../../../app/stylesheets/screen.scss */
+/* line 232, ../../../app/stylesheets/screen.scss */
 .submit_area a:hover {
-  color: #96b0e0 !important;
+  color: #fcff00 !important;
 }
 
-/* line 237, ../../../app/stylesheets/screen.scss */
+/* line 238, ../../../app/stylesheets/screen.scss */
 #signup_submit {
   font-size: 1.5em;
   padding: 5px;
 }
 
-/* line 242, ../../../app/stylesheets/screen.scss */
+/* line 243, ../../../app/stylesheets/screen.scss */
 #footer {
   position: absolute;
   bottom: 0px;
   left: 0px;
   width: 100%;
   height: 11em;
-  background-color: #f0f0f0;
+  background-color: white;
   font-size: 1.1em;
   z-index: 5;
 }
-/* line 252, ../../../app/stylesheets/screen.scss */
+/* line 253, ../../../app/stylesheets/screen.scss */
 #footer .ncs_logo {
   float: left;
   padding-top: 0.2em;
   padding-left: 0.4em;
 }
-/* line 258, ../../../app/stylesheets/screen.scss */
+/* line 259, ../../../app/stylesheets/screen.scss */
 #footer .contact_info {
   padding-top: 1em;
   text-align: center;
 }
-/* line 263, ../../../app/stylesheets/screen.scss */
+/* line 264, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text {
   float: right;
   width: 200px;
   padding-top: 0.5em;
   padding-right: 0.5em;
 }
-/* line 269, ../../../app/stylesheets/screen.scss */
+/* line 270, ../../../app/stylesheets/screen.scss */
 #footer .ncs_text img {
   padding: 1em;
   display: block;
@@ -646,19 +648,19 @@ body {
   margin-right: auto;
 }
 
-/* line 279, ../../../app/stylesheets/screen.scss */
+/* line 280, ../../../app/stylesheets/screen.scss */
 #confd_msg {
   display: none;
 }
 
-/* line 283, ../../../app/stylesheets/screen.scss */
+/* line 284, ../../../app/stylesheets/screen.scss */
 #thank_you {
   margin-top: 4em;
   padding-left: 40px;
   font-size: 2em;
   font-weight: bold;
 }
-/* line 289, ../../../app/stylesheets/screen.scss */
+/* line 290, ../../../app/stylesheets/screen.scss */
 #thank_you .note {
   font-size: 0.8em;
   font-weight: normal;
