--- a/app/views/sign_up/new.haml
+++ b/app/views/sign_up/new.haml
@@ -68,7 +68,7 @@
           = f.select :contact_preference, ["Call me", "Mail me a brochure", "Send me an email"]
    
     .submit_area
-      = link_to "Click here to read our confidentiality statement", nil, {:href => "#",:id => "confd_show"}
+      = link_to "Read our confidentiality statement", nil, {:href => "#",:id => "confd_show"}
       &nbsp;
       = f.submit "Submit", {:id => "signup_submit"}
 
