added a H1 tag to the page as requested by 508 review

--- a/app/stylesheets/screen.scss
+++ b/app/stylesheets/screen.scss
@@ -127,16 +127,15 @@ body {
     }
   }
 }
-#heading {
+
+h1.heading {
   @include prepend-top(1em);
-  font-size: 2em;
-  
+  @include prepend(1);
+  color: $primary_text !important;
   em {
     font-style: normal;
-    font-size: 1.2em;
     font-weight: bold;
   }
-
 }
 
 #sign_up{
