updated wording of elements per 508 review

--- a/app/views/layouts/application.haml
+++ b/app/views/layouts/application.haml
@@ -25,7 +25,7 @@
         .ncs_text
           = image_tag("ncs_gcsc_words_sm.png", :alt => "Greater Chicago Study Center")  
         .contact_info
-          National Children&#39;s Study &ndash; Greater Chicago Study Center
+          National Children&#39;s Study - Greater Chicago Study Center
           %br
           Institute for Healthcare Studies, Feinberg School of Medicine
           %br
